environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      containers:
      - name: dummy-app
        image: 21ssd44/dummy-app:latest
        ports:
        - containerPort: 5000
