environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
spec:
  type: ClusterIP
  selector:
    app: dummy-app
  ports:
    - port: 80
      targetPort: 5000
